WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279383
[JSC] super construct's callee does not need to be JSFunction
https://bugs.webkit.org/show_bug.cgi?id=279383
Summary
[JSC] super construct's callee does not need to be JSFunction
Yusuke Suzuki
Reported
2024-09-09 14:38:46 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2024-09-09 14:38:47 PDT
<
rdar://problem/135588646
>
Yusuke Suzuki
Comment 2
2024-09-09 14:39:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33337
EWS
Comment 3
2024-09-09 16:12:13 PDT
Committed
283367@main
(98e4ff61939f): <
https://commits.webkit.org/283367@main
> Reviewed commits have been landed. Closing PR #33337 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug