[JSC] super construct's callee does not need to be JSFunction https://bugs.webkit.org/show_bug.cgi?id=279383 rdar://135588646

Reviewed by Yijia Huang.

These cached callees do not need to be JSFunction. Fixing stale
assertion.

* Source/JavaScriptCore/dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::parseBlock):

Canonical link: https://commits.webkit.org/283367@main